Separation of new and edit forms

--- a/app/views/users/_edit_form.html.erb
+++ b/app/views/users/_edit_form.html.erb
@@ -14,17 +14,15 @@
     </div>
   </div>
 
-  <% if request.path_info = edit_user_path %>
-    <div class="objective">
-      <%= f.label :objective, '目標設定' %>
-      <div class="objective-form">
-        <%= f.text_field :objective %>
-      </div>
+  <div class="objective">
+    <%= f.label :objective, '目標設定' %>
+    <div class="objective-form">
+      <%= f.text_field :objective %>
     </div>
-  <% end %>
+  </div>
  
   <div class="form-button">
-    <%= f.submit yield(:button_text) %>
+    <%= f.submit '更新' %>
   </div>
 
 <% end %>
