--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, 'ユーザー編集') %>
-<% provide(:button_text, '更新') %>
 
 <div class="user-edit-page">
   <h1>ユーザー編集</h1>
   <%= render 'shared/user_error_messages' %>
-  <%= render 'form' %>
+  <%= render 'edit_form' %>
 </div>
