--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, '新規登録') %>
-<% provide(:button_text, '登録') %>
 
 <div class="signup-page">
   <h1>新規登録</h1>
   <%= render 'shared/user_error_messages' %>
-  <%= render 'form' %>
+  <%= render 'new_form' %>
 </div>
