--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,12 +1,11 @@
 <%= form_for @book do |f| %>
 
   <div class="input-form">
-    <%= f.label :title, 'Tilte' %>
     <%= f.text_field :title, placeholder: 'タイトル' %>
   </div>
 
   <div class="book-image">
-    <%= f.label :image, 'Book image' %>
+    <%= f.label :image, '本の画像' %>
     <div class="image-field">
       <%= f.file_field :image %>
     </div>
@@ -14,12 +13,12 @@
  
 
   <div class="text-form">
-    <%= f.label :content, 'Memo' %>
+    <%= f.label :content, '内容' %>
     <%= f.text_area :content %>
   </div>
 
   <div class="form-button">
-    <%= f.submit '登録' %>
+    <%= f.submit yield(:button_text) %>
   </div>
 
 <% end %>
