--- a/app/views/layouts/_side_menu.html.erb
+++ b/app/views/layouts/_side_menu.html.erb
@@ -18,7 +18,7 @@
       </li>
       <li>
         <%= link_to book_show_like_path(current_user), method: :get do %>
-          <i class="far fa-heart"></i>お気に入り
+          <i class="far fa-heart"></i>お気に入りした本
         <% end %>
       </li>
       <li>
