--- a/app/views/likes/book_show.html.erb
+++ b/app/views/likes/book_show.html.erb
@@ -1,4 +1,7 @@
 <div class="like-book-show-page">
+  <div class="like-book-show-title">
+    <h1>お気に入りした本</h1>
+  </div>
   <div class="like-book-container">
     <% @likes.each do |like| %>
       <div class="like-book-show-info">
