--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,5 +1,7 @@
-<p><%= @user.name %>さん！</p>
+<p>BookShelfへようこそ！</p>
 
-<p>新規登録内容の入力ありがとうございます！下のリンクを押して本登録をして下さい！</p>
+<p>こんにちは、<%= @user.name %>さん！</p>
 
-<%= link_to '登録を完了させる', edit_account_activation_url(@user.activation_token, email: @user.email) %>
+<p>下記リンクから登録の完了をお願いします。</p>
+
+<%= link_to '登録する', edit_account_activation_url(@user.activation_token, email: @user.email) %>
