--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,3 +1,3 @@
-<h1>Hi! <%= @user.name %></h1>
+<p><%= @user.name %>さん</p>
 
-<p><%= link_to 'password reset', edit_password_reset_url(@user.reset_token, email: @user.email) %></p>
+<p><%= link_to 'パスワードをリセットする', edit_password_reset_url(@user.reset_token, email: @user.email) %></p>
