--- a/app/views/tops/about.html.erb
+++ b/app/views/tops/about.html.erb
@@ -1,17 +1,9 @@
 <% provide(:title, 'できること') %>
 
-<h1>EnjoyReadingでできること</h1>
+<h1>BookShelfとは？</h1>
 
-<p>- 機能 -</p>
-<ul>
-  <li>新規登録 OK</li>
-  <li>ログイン, ログアウト(ログイン状態の維持) OK</li>
-  <li>アカウントの有効化 OK</li>
-  <li>パスワードのリセット機能 OK</li>
-  <li>リレーション機能(フォロー,フォロワー)</li>
-  <li>----------------↑RailsTutorialによる実装なのでオリジナルではない↑-------------</li>
-  <li>----------------↓自分で考えたり、調べたりしてコードを書くこと---↓-------------</li>
-  <li>自分の本棚（読んだ内容を記録して置ける場所）</li>
-  <li>継続をしやすくなる機能（未定）</li>
-  <li>本棚の共有（自分の本棚共有, いいね機能, コメント機能, 購入URL(amazon)）</li>
-</ul>
+<p>本の管理</p>
+
+<p>管理した本の共有</p>
+
+<p>- 楽しみながら知識を身につけよう！ -</p>
