--- a/app/views/likes/book_show.html.erb
+++ b/app/views/likes/book_show.html.erb
@@ -3,6 +3,11 @@
     <h1>お気に入りした本</h1>
   </div>
   <div class="like-book-container">
+    <% if @likes.empty? %>
+      <div class="favorite-book-empty">
+        <p>お気に入りした本がありません。</p>
+      </div>
+    <% end %>
     <% @likes.each do |like| %>
       <div class="like-book-show-info">
         <div class="like-book-title">
