--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,15 +7,19 @@
     <div class="users">
       <% @users.each do |user| %>
         <% unless current_user?(user) %>
-          <div class="users-image">
-            <% if user.image? %>
-              <%= image_tag user.image.url, size: '150x150' %>
-            <% else %>
-              <%= image_tag 'default_user.jpg', size: '150x150' %>
-            <% end %>
-          </div>
-          <div class="users-name">
-            <%= link_to user.name, user_path(user) %>
+          <div class="user">
+            <div class="user-info">
+              <div class="user-image">
+                <% if user.image? %>
+                  <%= image_tag user.image.url, size: '150x150' %>
+                <% else %>
+                  <%= image_tag 'default_user.jpg', size: '150x150' %>
+                <% end %>
+              </div>
+              <div class="user-name">
+                <%= link_to user.name, user_path(user) %>
+              </div>
+            </div>
           </div>
         <% end %>
       <% end %>
