css compatible with safari

--- a/app/assets/stylesheets/custum.scss
+++ b/app/assets/stylesheets/custum.scss
@@ -536,6 +536,7 @@ header {
             background-color: $light-gray;
             border: 1px solid $light-blue;
             border-radius: 5px;
+            border-style: none;
             outline: none;
             color: $light-blue;
             &:hover {
