--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -6,4 +6,7 @@
   <div class="signup-button">
     <%= link_to '新規登録', signup_path %>
   </div>
+  <div class="test-user-login">
+    <%= render 'users/test_user_form' %>
+  </div>
 </div>
