continue controller adjustment

--- a/app/views/continues/_continue_form.html.erb
+++ b/app/views/continues/_continue_form.html.erb
@@ -1,6 +1,6 @@
 <div id="continue-form">
   <% if current_user?(user) %>
     <%= render partial: 'continues/continue', locals: { user: user } %>
-    <%= link_to '削除', continue_url(user.continues), method: :delete %>
+    <%= link_to '削除', continue_path(user.id), method: :delete %>
   <% end %>
 </div>
