--- a/app/assets/stylesheets/custum.scss
+++ b/app/assets/stylesheets/custum.scss
@@ -210,6 +210,7 @@ header {
         height: 30px;
         border: 1px solid black;
         outline: none;
+        -webkit-appearance: none;
         &:focus {
           border: 1px solid $blue;
           box-shadow: 0.5px 0.5px 3px 0.5px $blue;
