--- a/app/views/continues/_continue.html.erb
+++ b/app/views/continues/_continue.html.erb
@@ -1,6 +1,8 @@
 <div class="continue_count_button">
+  
+  
   <%= form_for user.continues.build, remote: true do |f| %>
     <%= hidden_field_tag :user_id, user.id %>
-    <%= f.submit '継続カウントする' %>
+    <%= f.submit '継続する' %>
   <% end %>
 </div>
