--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,27 +4,7 @@
   <div class="all-user-page-title">
     <h1>ユーザーを探してみよう！</h1>
   </div>
-  <div class="users">
-    <% @users.each do |user| %>
-      <% unless current_user?(user) %>
-        <div class="user">
-          <div class="user-info">
-            <div class="user-image">
-              <% if user.image? %>
-                <%= image_tag user.image.url, size: '150x150' %>
-              <% else %>
-                <%= image_tag 'default_user.jpg', size: '150x150' %>
-              <% end %>
-            </div>
-            <div class="user-name">
-              <%= link_to user.name, user_path(user) %>
-            </div>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
-    <div class="paginate">
-      <%= paginate @users %>
-    </div>
+  <div id="users">
+    <%= render partial: 'index_users' %>
   </div>
 </div>
